test_regress/t/t_var_bad_hide_docs.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2009 by Wilson Snyder.
// SPDX-License-Identifier: CC0-1.0

module t;
   integer t;  //<--- Warning ('t' hidden by module 't')
endmodule
